# siameseNN

./: .bazelignore  .bazeliskrc  .bazelrc  .bazelrc_linux  .gitattributes  .gitignore  .ruff.toml  BUILD  BUILD.bazel  LICENSE  MODULE.bazel  README.md  SiameseNotes.md  WORKSPACE  gazelle_python.yaml  pyproject.toml  requirements.in  requirements.txt  requirements_lock.txt  requirements_windows.txt  setup.sh  start.ps1  start.sh  test_gpu_availability.py
app/: BUILD  __main__.py
app/utils/: BUILD  __init__.py  layers.py  utils.py
bazel/: workspace_dir.bzl  zip_extract.bzl
classification_from_scratch/: BUILD  __main__.py
classification_from_scratch/class_utils/: BUILD  layers.py
docs/: docs.tex
first_app/: BUILD  __main__.py
first_app/apputils/: BUILD  __init__.py  keras_utils.py  layers.py
siamese_first/: BUILD  __main__.py
siamese_first/siamese_lib/: BUILD  __init__.py  layers.py
siamese_second/: BUILD  __main__.py
utils/: BUILD  __init__.py  pyqt_import_hook.py  win_dll_import.py
