# https://stackoverflow.com/questions/69890200/how-to-configure-os-specific-dependencies-in-a-pyproject-toml-file-maturin
[project]
name = "siameseNN"
version = "1.0.0"
dependencies = [
    "absl-py",
    "numpy < 2",
    "pyqt6",
    "pydot",
    "matplotlib",

    "keras; platform_system == 'Linux'",
    "tensorflow[and-cuda]==2.17.1  ; platform_system == 'Linux'",

    "keras == 2.10.0 ; platform_system == 'Windows'",
    "tensorflow-gpu == 2.10 ; platform_system == 'Windows'",
    "nvidia-pyindex ; platform_system == 'Windows'",
    "nvidia-cuda-runtime-cu11==11.7.99 ; platform_system == 'Windows'",
    "nvidia-cudnn-cu11==8.9.4.25 ; platform_system == 'Windows'",
    "nvidia-cufft-cu11==10.9.0.58 ; platform_system == 'Windows'",
    "nvidia-cusparse-cu11==11.7.5.86 ; platform_system == 'Windows'"
]